--- a/index.html
+++ b/index.html
@@ -5,38 +5,126 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
-    <button class="button button--theme--blue button--size--small">
-        <span class="button__text">jfgfkhvjkcdc</span>
-    </button>
-    <button class="button button--theme-light-blue button-size-medium">dddddd</button>
-    <button class="button button--theme-red button--size-large">галя отмена</button>
-
-    <br>
-
-    <button class="button button--theme-red button--size-large button--disabled">галя отмена</button>
-    
-    <hr>
-
-    <div class="card">
-        <img src="https://ir.ozone.ru/s3/multimedia-u/wc1000/6609989622.jpg" class="card__image">
-
-        <div class="card__price">
-            <span class="price price--theme-red price--size-large">11 249 P</span>
-            <span class="price price--theme-grey price--size-small">18 949 P</span>
-
-            <h2 class="card__title">
-                Дакимакура Хасбика
-            </h2>
-
-            <button class="button button--theme-light-blue button--size-medium">Добавить в корзину</button>
-
+        <div class="container">
+        <div class="row">
+            <div class="col col--size-2 col--offset-2">
+                <div class="block">2</div>
+            </div>
+            <div class="col col--size-2">
+                <div class="block">2</div>
+            </div>
+            <div class="col col--size-2">
+                <div class="block">2</div>
+            </div>
         </div>
 
+        <hr>
+
+        <div class="row row--align-bottom">
+            <div class="col col--size-4">
+                <div class="block block--size-1">4</div>
+            </div>
+            <div class="col col--size-4">
+                <div class="block">4</div>
+            </div>
+        </div>
+
+        <hr>
+
+        <div class="row row--align-center">
+            <div class="col col--size-4">
+                <div class="block">4</div>
+            </div>
+            <div class="col col--size-4">
+                <div class="block block--size-1">4</div>
+            </div>
+        </div>
+
+        <hr>
+
+        <div class="row row--justify-center">
+            <div class="col col--size-4">
+                <div class="block">4</div>
+            </div>
+            <div class="col col--size-4">
+                <div class="block">4</div>
+            </div>
+        </div>
+
+        <hr>
+
+        <div class="row row--space-between">
+            <div class="col col--size-4">
+                <div class="block">4</div>
+            </div>
+            <div class="col col--size-4">
+                <div class="block">4</div>
+            </div>
+        </div>
+
+        <hr>
+
+        <div class="row">
+            <div class="col col--size-auto col--size-3">
+                <div class="block">3</div>
+            </div>
+
+            <div class="col col--size-auto col--size-3">
+                <div class="block">3</div>
+            </div>
+
+            <div class="col col--size-auto col--size-3">
+                <div class="block">3</div>
+            </div>
+        </div>
+
+        <hr>
+
+        <div class="row">
+
+            <div class="col  col--size-1">
+                <div class="block">1</div>
+            </div>
+            <div class="col col--size-2">
+                <div class="block">2</div>
+            </div>
+
+            <div class="col col--size-3">
+                <div class="block">3</div>
+            </div>
+
+            <div class="col col--size-4">
+                <div class="block">4</div>
+            </div>
+
+            <div class="col col--size-5">
+                <div class="block">5</div>
+            </div>
+
+            <div class="col col--size-6">
+                <div class="block">6</div>
+            </div>
+
+            <div class="col col--size-7">
+                <div class="block">7</div>
+            </div>
+
+            <div class="col col--size-8">
+                <div class="block">8</div>
+            </div>
+
+            <div class="col col--size-9">
+                <div class="block">9</div>
+            </div>
+
+            <div class="col col--size-12">
+                <div class="block">12</div>
+            </div>
+        </div>
     </div>
 
 </body>
