--- a/grids.html
+++ b/grids.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="grids.css">
 </head>
 <body>
     
@@ -127,5 +127,6 @@
         </div>
     </div>
 
+    <script src="grids.js" type="module"></script>
 </body>
 </html>
